--- a/style.css
+++ b/style.css
@@ -1,3 +1,2 @@
 h1, p {
-  font-family: Lato;
-}
+    font-family: Lato;}html, body {  height: 100%;}.Login-component {    background: url(https://i.imgur.com/tjYiDcx.jpg);      /* Full height */     height: 100%;      /* Center and scale the image nicely */    background-position: center;    background-repeat: no-repeat;    background-size: cover;}
